--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-parallax": "^3.5.2",
     "simple-parallax-js": "^6.1.1",
     "tailwindcss": "^4.1.4"
   },
